--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # Visual Studio cache directory
 .vs/
+.vscode/
 
 # Gradle cache directory
 .gradle/
@@ -46,3 +47,8 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+# Steam VR
+[Aa]ssets/SteamVR
+[Aa]ssets/SteamVR_Resources
+[Aa]ssets/SteamVRAssets
